# keroro

./: anilist.lua  default.nix  flake.nix  pyproject.toml  script.nix
keroro/: __init__.py
keroro/presence/: run_presence.py  update_presence.py
keroro/utils/: anilist_requests.py  config.py  continue_watching.py  mapper.py  offset.py  search.py  update_progress.py
